# jwyant-snowsightcli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  snowflake_logo.ansi  snowflake_logo_big.ansi
snowsight/: __init__.py  app.py  cli.py  config.py
snowsight/db/: client.py
snowsight/styles/: app.tcss
snowsight/widgets/: __init__.py  editor_pane.py  explorer.py  results_pane.py  user_badge.py
